--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,13 @@ python-multipart = "^0.0.9"
 pyjwt = "^2.8.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.1.1"
+pre-commit = "^3.6.2"
+pytest-cov = "^4.1.0"
+pytest-randomly = "^3.15.0"
+black = "^24.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
