--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "fastui-demo"
+name = "fastui-app"
 version = "0.1.0"
-description = ""
+description = "FastUI App"
 authors = ["John Bull <johnbullnz@gmail.com>"]
 readme = "README.md"
 
@@ -13,7 +13,6 @@ fastapi = "^0.109.2"
 httpx = "^0.27.0"
 python-multipart = "^0.0.9"
 pyjwt = "^2.8.0"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
